[package]
name = "anycache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
moka = { version = "0.12.0", features = ["sync", "future"] }
redis = "0.23.3"
tokio = { version = "1.32.0", features = ["full"] }
